# voxbrix

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
scripts/server/place_block/: Cargo.toml
scripts/server/place_block/src/: lib.rs
scripts/server/server_loop/place_block/: Cargo.toml
scripts/server/server_loop/remove_block/: Cargo.toml
scripts/server/server_loop_api/: Cargo.toml
scripts/server/server_loop_api/src/: common.rs  lib.rs  script.rs
voxbrix_client/: Cargo.toml
voxbrix_client/src/: assets.rs  camera.rs  component.rs  entity.rs  event_loop.rs  linear_algebra.rs  main.rs  manager.rs  resource.rs  scene.rs  shaders.wgsl  storage.rs  system.rs  vertex.rs  window.rs
voxbrix_client/src/component/: actor.rs  actor_class.rs  actor_model.rs  block.rs  block_class.rs  block_model.rs  chunk.rs
voxbrix_client/src/component/actor/: animation_state.rs  class.rs  effect.rs  facing.rs  orientation.rs  position.rs  target_orientation.rs  target_position.rs  velocity.rs
voxbrix_client/src/component/actor_class/: block_collision.rs  health.rs  model.rs
voxbrix_client/src/component/actor_model/: animation.rs  body_part.rs  builder.rs
voxbrix_client/src/component/block/: class.rs  environment.rs  metadata.rs
voxbrix_client/src/component/block_class/: culling.rs  model.rs
voxbrix_client/src/component/block_environment/: model.rs
voxbrix_client/src/component/block_model/: builder.rs  culling.rs  opacity.rs
voxbrix_client/src/component/chunk/: render_data.rs  render_priority.rs  sky_light_data.rs  status.rs
voxbrix_client/src/component/texture/: location.rs
voxbrix_client/src/entity/: actor_class.rs  actor_model.rs  block.rs  block_class.rs  block_model.rs  chunk.rs  texture.rs  vertex.rs
voxbrix_client/src/resource/: chunk_calculation_data.rs  confirmed_snapshots.rs  interface.rs  interface_state.rs  player_actor.rs  player_chunk_view_radius.rs  player_input.rs  render_pool.rs  server_sender.rs
voxbrix_client/src/resource/render_pool/: camera.rs  gpu_vec.rs  primitives.rs
voxbrix_client/src/scene/: game.rs  menu.rs
voxbrix_client/src/scene/game/: chunk_calculation.rs  data.rs  local_input.rs  network_input.rs  process.rs  send_state.rs
voxbrix_client/src/system/: actor_model_loading.rs  actor_render.rs  block_environment_model.rs  block_environment_render.rs  block_model.rs  block_model_loading.rs  block_render.rs  block_texture_loading.rs  chunk_changes_accept.rs  chunk_presence.rs  chunk_render_pipeline.rs  controller.rs  entity_removal.rs  hud.rs  interface.rs  interface_render.rs  inventory_window.rs  list_loading.rs  model_loading.rs  movement_interpolation.rs  player_control.rs  player_position.rs  position.rs  render.rs  send_changes.rs  server_actions.rs  server_dispatches.rs  server_state.rs  server_updates.rs  sky_light.rs  target_block_highlight.rs  texture_loading.rs  update_render_pool.rs
voxbrix_client/src/system/render/: camera.rs  gpu_vec.rs  output_thread.rs  primitives.rs  vertex.rs
voxbrix_common/: Cargo.toml
voxbrix_common/src/: assets.rs  async_ext.rs  component.rs  entity.rs  lib.rs  math.rs  messages.rs  pack.rs  resource.rs  script_convert.rs  script_registry.rs  sparse_vec.rs  stream.rs  system.rs
voxbrix_common/src/component/: actor.rs  actor_class.rs  block.rs  block_class.rs  block_environment.rs  chunk.rs  dimension_kind.rs
voxbrix_common/src/component/actor/: effect.rs  facing.rs  orientation.rs  position.rs  velocity.rs
voxbrix_common/src/component/actor_class/: block_collision.rs  health.rs
voxbrix_common/src/component/block/: class.rs  metadata.rs  sky_light.rs
voxbrix_common/src/component/block_class/: collision.rs  opacity.rs
voxbrix_common/src/component/dimension_kind/: sky_light_config.rs
voxbrix_common/src/component/effect/: state.rs
voxbrix_common/src/entity/: action.rs  actor.rs  actor_class.rs  actor_model.rs  block.rs  block_class.rs  block_environment.rs  chunk.rs  dispatch.rs  effect.rs  script.rs  snapshot.rs  state_component.rs  update.rs
voxbrix_common/src/messages/: client.rs  server.rs
voxbrix_common/src/resource/: component_map.rs  process_timer.rs  removal_queue.rs
voxbrix_common/src/script_convert/: server_loop.rs
voxbrix_common/src/system/: actor_class_loading.rs  block_class_loading.rs  component_map.rs  list_loading.rs  position.rs  sky_light.rs
voxbrix_messages/: Cargo.toml
voxbrix_messages/src/: client.rs  lib.rs  server.rs
voxbrix_protocol/: Cargo.toml  README.md
voxbrix_protocol/src/: client.rs  lib.rs  local_oneshot.rs  server.rs
voxbrix_protocol/tests/: address_migration.rs  reliable_simple.rs  reliable_slow.rs  unreliable_simple.rs
voxbrix_server/: Cargo.toml
voxbrix_server/src/: assets.rs  client.rs  client_loop.rs  component.rs  entity.rs  main.rs  resource.rs  server.rs  server_loop.rs  storage.rs  store.rs  system.rs  world.rs
voxbrix_server/src/component/: actor.rs  actor_class.rs  block.rs  block_class.rs  chunk.rs  dimension_kind.rs  effect.rs  player.rs
voxbrix_server/src/component/action/: handler.rs  (+1 more)
voxbrix_server/src/entity/: actor.rs  block.rs  block_class.rs  chunk.rs  player.rs
voxbrix_server/src/resource/: chunk_generation_request.rs  process_timer.rs  projectile_actor_collisions.rs  script_shared_data.rs  shared_event.rs
voxbrix_server/src/server_loop/: actor_collision.rs  data.rs  player_event.rs  process.rs
voxbrix_server/src/system/: actor_block_collision.rs  actor_pruning.rs  actor_sync.rs  block_sync.rs  chunk_activation.rs  chunk_add.rs  chunk_generation.rs  chunk_pruning.rs  chunk_sending.rs  chunk_ticket.rs  effect_snapshot.rs  entity_removal.rs  map_loading.rs  player_actions.rs  player_add.rs  player_state.rs  player_updates.rs  position.rs  projectile_actor_handling.rs  projectile_block_handling.rs  projectile_hitbox_collision.rs
voxbrix_server/src/world/: player_event.rs  process.rs
voxbrix_world/: Cargo.toml
voxbrix_world/src/: lib.rs
voxbrix_world/tests/: derive_tests.rs  tests.rs
voxbrix_world/voxbrix_world_derive/: Cargo.toml
voxbrix_world/voxbrix_world_derive/src/: lib.rs
(+134 files in other folders)
