[package]
name = "voxbrix"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "A voxel game."
edition = "2021"

[workspace]
members = [
    "voxbrix_client",
    "voxbrix_common",
    "voxbrix_protocol",
    "voxbrix_server",
    "local_channel"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = "1"
rayon = "1.10"
futures-lite = { version = "2", default-features = false }
flume = { version = "0.11", default-features = false, features = ["async"] }
postcard = { version = "1.1.1", default-features = false }
serde = { version = ">=1.0.184", default-features = false, features = ["std", "derive"] } 
serde-big-array = "0.5.1"
k256 = { version = "0.13.4", features = ["ecdsa"] }
lz4_flex = "0.11"
arrayvec = { version = "0.7", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std", "raw_value"] }
nohash-hasher = "0.2"
ahash = "0.8"
wasmtime = { version = "27.0", default-features = false, features = ["runtime", "cranelift", "parallel-compilation"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
backtrace = "0.3"
