[package]
name = "voxbrix_client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = { workspace = true }
rayon = { workspace = true }
blocking = { workspace = true }
futures-lite = { workspace = true }
async-io = { workspace = true }
flume = { workspace = true }
serde = { workspace = true } 
k256 = { workspace = true } 
arrayvec = { workspace = true }
ron = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
voxbrix_protocol = { path = "../voxbrix_protocol", features = ["single", "client"] }
voxbrix_common = { path = "../voxbrix_common" }
local_channel = { path = "../local_channel" }
either = "1.8"
winit = "0.28"
wgpu = "0.15"
egui = "0.21"
egui-winit = { version = "0.21", default-features = false, features = ["clipboard", "wayland"] }
egui-wgpu = "0.21"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
bitmask = "0.5"
argon2 = { version = "0.5.0", default-features = false, features = ["alloc"] }
