[package]
name = "voxbrix_client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt", "time"] }
rayon = { workspace = true }
futures-lite = { workspace = true }
flume = { workspace = true }
bincode = { workspace = true } 
serde = { workspace = true } 
k256 = { workspace = true } 
arrayvec = { workspace = true }
ron = { workspace = true }
nohash-hasher = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
backtrace = { workspace = true }
voxbrix_protocol = { path = "../voxbrix_protocol", features = ["single", "client"] }
voxbrix_common = { path = "../voxbrix_common" }
local_channel = { path = "../local_channel" }
winit = "0.29"
wgpu = { version = "0.19", default-features = false, features = ["metal", "wgsl"] }
egui = { version = "0.26", default-features = false }
egui-winit = { version = "0.26", default-features = false, features = ["clipboard", "wayland"] }
egui-wgpu = "0.26"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
bitflags = "2"
argon2 = { version = "0.5.3", default-features = false, features = ["alloc"] }
