[package]
name = "voxbrix_client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt", "time"] }
rayon = { workspace = true }
futures-lite = { workspace = true }
flume = { workspace = true }
postcard = { workspace = true } 
serde = { workspace = true } 
k256 = { workspace = true } 
arrayvec = { workspace = true }
serde_json = { workspace = true } 
nohash-hasher = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
backtrace = { workspace = true }
voxbrix_protocol = { path = "../voxbrix_protocol", features = ["single", "client"] }
voxbrix_common = { path = "../voxbrix_common" }
voxbrix_world = { path = "../voxbrix_world" }
local_channel = { path = "../local_channel" }
winit = "0.30"
wgpu = { version = "25.0", default-features = false, features = ["vulkan", "metal", "wgsl"] }
egui = { version = "0.32", default-features = false }
egui-winit = { version = "0.32", default-features = false, features = ["clipboard", "wayland"] }
egui-wgpu = "0.32"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
bitflags = "2"
argon2 = { version = "0.5.3", default-features = false, features = ["alloc"] }
rect_packer = "0.2.1"
pollster = { version = "0.4", default-features = false }
