[package]
name = "voxbrix_common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt"] }
rayon = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
lz4_flex = { workspace = true }
arrayvec = { workspace = true }
ron = { workspace = true }
nohash-hasher = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
glam = { version = "0.24", features = ["serde"] }
futures-core = { version = "0.3", default-features = false }
pin-project-lite = "0.2"
