[package]
name = "voxbrix_messages"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0", default-features = false, features = ["use-std"] }
serde = "1.0"
