[package]
name = "voxbrix_protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-encoding = "3.0"
async-io = "1.10"
futures-lite = "1.12"
local_channel = { path = "../local_channel" , optional = true }
flume = { version = "0.10", optional = true }
async-oneshot = { version = "0.5", optional = true }
log = "0.4"

[dev-dependencies]
async-executor = "1.5"

[features]
default = []
single = ["local_channel"]
multi = ["flume", "async-oneshot"]
client = []
server = []
