[package]
name = "voxbrix_protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-encoding = "4.0"
tokio = { version = "1", features = ["net", "time"] }
local_channel = { path = "../local_channel" , optional = true }
flume = { version = "0.11", optional = true }
async-oneshot = { version = "0.5", optional = true }
k256 = { version = "0.13.2", default-features = false, features = ["ecdh"] }
sha2 = { version = "0.10", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["getrandom"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
futures-lite = { version = "2", default-features = false, optional = true }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
futures-lite = { version = "2", default-features = false }

[features]
default = []
single = ["local_channel"]
multi = ["flume", "async-oneshot"]
client = []
server = ["futures-lite"]
