[package]
name = "voxbrix_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.5"
blocking = "1.3"
futures-lite = "1.12"
async-io = "1.12"
voxbrix_protocol = { path = "../voxbrix_protocol", features = ["single", "server"] }
voxbrix_common = { path = "../voxbrix_common" }
redb = "0.12"
flume = { version = "0.10", default-features = false, features = ["async"] }
serde = "1.0"
serde-big-array = "0.4"
postcard = { version = "1.0", default-features = false, features = ["use-std"] }
lz4_flex = { version = "0.9", default-features = false, features = ["checked-decode"] }
local_channel = { path = "../local_channel" }
k256 = { version = "0.11.6", features = ["ecdsa"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
