[package]
name = "voxbrix_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt", "time"] }
futures-lite = { workspace = true }
flume = { workspace = true }
serde = { workspace = true } 
serde-big-array = { workspace = true } 
k256 = { workspace = true } 
lz4_flex = { workspace = true } 
bincode = { workspace = true } 
nohash-hasher = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
voxbrix_protocol = { path = "../voxbrix_protocol", features = ["single", "server"] }
voxbrix_common = { path = "../voxbrix_common" }
local_channel = { path = "../local_channel" }
redb = "0.14"
ahash = "0.8"
wasmtime = { version = "12.0", default-features = false, features = ["cranelift", "parallel-compilation"] }
