[package]
name = "server_loop_api"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = ">=1.0.184", default-features = false, features = ["derive"] } 
postcard = { version = "1.1", default-features = false, optional = true }
paste = { version = "1.0", optional = true }

[features]
default = ["script"]
host = []
script = ["postcard", "paste"]
