[package]
name = "place_block"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]

[profile.release]
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies]
bincode = { git = "https://github.com/bincode-org/bincode.git", rev = "8f65c60" }
server_loop_api = { path = "../../server_loop_api" }
